@@ -21,7 +21,6 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.rao_result_json.RaoResultJsonConstants.*;
-import static com.farao_community.farao.data.rao_result_json.RaoResultJsonConstants.CONTINGENCY_ID;
 
 /**
  * @author Baptiste Seguinot {@literal <baptiste.seguinot at rte-france.com>}
@@ -35,7 +34,7 @@ final class NetworkActionResultArraySerializer {
 
         List<NetworkAction> sortedListOfNetworkActions = crac.getNetworkActions().stream()
             .sorted(Comparator.comparing(NetworkAction::getId))
-            .collect(Collectors.toList());
+            .toList();
 
         jsonGenerator.writeArrayFieldStart(NETWORKACTION_RESULTS);
         for (NetworkAction networkAction : sortedListOfNetworkActions) {
@@ -47,9 +46,9 @@ final class NetworkActionResultArraySerializer {
     private static void serializeNetworkActionResult(NetworkAction networkAction, RaoResult raoResult, Crac crac, JsonGenerator jsonGenerator) throws IOException {
 
         List<State> statesWhenNetworkActionIsActivated = crac.getStates().stream()
-                .filter(state -> safeIsActivatedDuringState(raoResult, state, networkAction))
-                .sorted(STATE_COMPARATOR)
-                .collect(Collectors.toList());
+            .filter(state -> safeIsActivatedDuringState(raoResult, state, networkAction))
+            .sorted(STATE_COMPARATOR)
+            .toList();
 
         if (statesWhenNetworkActionIsActivated.isEmpty()) {
             return;
@@ -58,9 +57,9 @@ final class NetworkActionResultArraySerializer {
         jsonGenerator.writeStartObject();
         jsonGenerator.writeStringField(NETWORKACTION_ID, networkAction.getId());
         jsonGenerator.writeArrayFieldStart(STATES_ACTIVATED);
-        for (State state: statesWhenNetworkActionIsActivated) {
+        for (State state : statesWhenNetworkActionIsActivated) {
             jsonGenerator.writeStartObject();
-            jsonGenerator.writeStringField(INSTANT, serializeInstant(state.getInstant()));
+            jsonGenerator.writeStringField(INSTANT, serializeInstantId(state.getInstant()));
             Optional<Contingency> optContingency = state.getContingency();
             if (optContingency.isPresent()) {
                 jsonGenerator.writeStringField(CONTINGENCY_ID, optContingency.get().getId());
