@@ -9,7 +9,7 @@ package com.farao_community.farao.data.rao_result_json.serializers;
 import com.farao_community.farao.commons.FaraoException;
 import com.farao_community.farao.commons.Unit;
 import com.farao_community.farao.data.crac_api.Crac;
-import com.farao_community.farao.data.crac_api.Instant;
+import com.farao_community.farao.data.crac_api.InstantKind;
 import com.farao_community.farao.data.crac_api.cnec.VoltageCnec;
 import com.farao_community.farao.data.rao_result_api.RaoResult;
 import com.fasterxml.jackson.core.JsonGenerator;
@@ -33,45 +33,45 @@ final class VoltageCnecResultArraySerializer {
 
         List<VoltageCnec> sortedListOfVoltageCnecs = crac.getVoltageCnecs().stream()
             .sorted(Comparator.comparing(VoltageCnec::getId))
-            .collect(Collectors.toList());
+            .toList();
 
         jsonGenerator.writeArrayFieldStart(VOLTAGECNEC_RESULTS);
         for (VoltageCnec voltageCnec : sortedListOfVoltageCnecs) {
-            serializeVoltageCnecResult(voltageCnec, raoResult, jsonGenerator);
+            serializeVoltageCnecResult(voltageCnec, raoResult, crac, jsonGenerator);
         }
         jsonGenerator.writeEndArray();
     }
 
-    private static void serializeVoltageCnecResult(VoltageCnec voltageCnec, RaoResult raoResult, JsonGenerator jsonGenerator) throws IOException {
+    private static void serializeVoltageCnecResult(VoltageCnec voltageCnec, RaoResult raoResult, Crac crac, JsonGenerator jsonGenerator) throws IOException {
 
-        if (containsAnyResultForVoltageCnec(raoResult, voltageCnec)) {
+        if (containsAnyResultForVoltageCnec(raoResult, crac, voltageCnec)) {
             jsonGenerator.writeStartObject();
             jsonGenerator.writeStringField(VOLTAGECNEC_ID, voltageCnec.getId());
 
             serializeVoltageCnecResultForOptimizationState(null, voltageCnec, raoResult, jsonGenerator);
-            serializeVoltageCnecResultForOptimizationState(Instant.PREVENTIVE, voltageCnec, raoResult, jsonGenerator);
+            serializeVoltageCnecResultForOptimizationState(crac.getUniqueInstant(InstantKind.PREVENTIVE).getId(), voltageCnec, raoResult, jsonGenerator);
 
             if (!voltageCnec.getState().isPreventive()) {
-                serializeVoltageCnecResultForOptimizationState(Instant.AUTO, voltageCnec, raoResult, jsonGenerator);
-                serializeVoltageCnecResultForOptimizationState(Instant.CURATIVE, voltageCnec, raoResult, jsonGenerator);
+                serializeVoltageCnecResultForOptimizationState(crac.getUniqueInstant(InstantKind.AUTO).getId(), voltageCnec, raoResult, jsonGenerator);
+                serializeVoltageCnecResultForOptimizationState(crac.getUniqueInstant(InstantKind.CURATIVE).getId(), voltageCnec, raoResult, jsonGenerator);
             }
             jsonGenerator.writeEndObject();
         }
     }
 
-    private static void serializeVoltageCnecResultForOptimizationState(Instant optInstant, VoltageCnec voltageCnec, RaoResult raoResult, JsonGenerator jsonGenerator) throws IOException {
+    private static void serializeVoltageCnecResultForOptimizationState(String optInstantId, VoltageCnec voltageCnec, RaoResult raoResult, JsonGenerator jsonGenerator) throws IOException {
 
-        if (containsAnyResultForOptimizationState(raoResult, voltageCnec, optInstant)) {
-            jsonGenerator.writeObjectFieldStart(serializeInstant(optInstant));
-            serializeVoltageCnecResultForOptimizationStateAndUnit(optInstant, Unit.KILOVOLT, voltageCnec, raoResult, jsonGenerator);
+        if (containsAnyResultForOptimizationState(raoResult, voltageCnec, optInstantId)) {
+            jsonGenerator.writeObjectFieldStart(optInstantId);
+            serializeVoltageCnecResultForOptimizationStateAndUnit(optInstantId, Unit.KILOVOLT, voltageCnec, raoResult, jsonGenerator);
             jsonGenerator.writeEndObject();
         }
     }
 
-    private static void serializeVoltageCnecResultForOptimizationStateAndUnit(Instant optInstant, Unit unit, VoltageCnec voltageCnec, RaoResult raoResult, JsonGenerator jsonGenerator) throws IOException {
+    private static void serializeVoltageCnecResultForOptimizationStateAndUnit(String optInstantId, Unit unit, VoltageCnec voltageCnec, RaoResult raoResult, JsonGenerator jsonGenerator) throws IOException {
 
-        double voltage = safeGetVoltage(raoResult, voltageCnec, optInstant, unit);
-        double margin = safeGetMargin(raoResult, voltageCnec, optInstant, unit);
+        double voltage = safeGetVoltage(raoResult, voltageCnec, optInstantId, unit);
+        double margin = safeGetMargin(raoResult, voltageCnec, optInstantId, unit);
 
         if (Double.isNaN(voltage) && Double.isNaN(margin)) {
             return;
@@ -87,37 +87,37 @@ final class VoltageCnecResultArraySerializer {
         jsonGenerator.writeEndObject();
     }
 
-    private static boolean containsAnyResultForVoltageCnec(RaoResult raoResult, VoltageCnec voltageCnec) {
+    private static boolean containsAnyResultForVoltageCnec(RaoResult raoResult, Crac crac, VoltageCnec voltageCnec) {
 
         if (voltageCnec.getState().isPreventive()) {
             return containsAnyResultForOptimizationState(raoResult, voltageCnec, null) ||
-                containsAnyResultForOptimizationState(raoResult, voltageCnec, Instant.PREVENTIVE);
+                containsAnyResultForOptimizationState(raoResult, voltageCnec, voltageCnec.getState().getInstant().getId());
         } else {
             return containsAnyResultForOptimizationState(raoResult, voltageCnec, null) ||
-                containsAnyResultForOptimizationState(raoResult, voltageCnec, Instant.PREVENTIVE) ||
-                containsAnyResultForOptimizationState(raoResult, voltageCnec, Instant.AUTO) ||
-                containsAnyResultForOptimizationState(raoResult, voltageCnec, Instant.CURATIVE);
+                containsAnyResultForOptimizationState(raoResult, voltageCnec, crac.getUniqueInstant(InstantKind.PREVENTIVE).getId()) ||
+                containsAnyResultForOptimizationState(raoResult, voltageCnec, crac.getUniqueInstant(InstantKind.AUTO).getId()) ||
+                containsAnyResultForOptimizationState(raoResult, voltageCnec, crac.getUniqueInstant(InstantKind.CURATIVE).getId());
         }
     }
 
-    private static boolean containsAnyResultForOptimizationState(RaoResult raoResult, VoltageCnec voltageCnec, Instant optInstant) {
-        return !Double.isNaN(safeGetVoltage(raoResult, voltageCnec, optInstant, Unit.KILOVOLT)) ||
-            !Double.isNaN(safeGetMargin(raoResult, voltageCnec, optInstant, Unit.KILOVOLT));
+    private static boolean containsAnyResultForOptimizationState(RaoResult raoResult, VoltageCnec voltageCnec, String optInstantId) {
+        return !Double.isNaN(safeGetVoltage(raoResult, voltageCnec, optInstantId, Unit.KILOVOLT)) ||
+            !Double.isNaN(safeGetMargin(raoResult, voltageCnec, optInstantId, Unit.KILOVOLT));
     }
 
-    private static double safeGetVoltage(RaoResult raoResult, VoltageCnec voltageCnec, Instant optInstant, Unit unit) {
+    private static double safeGetVoltage(RaoResult raoResult, VoltageCnec voltageCnec, String optInstantId, Unit unit) {
         // methods getVoltage can return an exception if RAO is executed on one state only
         try {
-            return raoResult.getVoltage(optInstant, voltageCnec, unit);
+            return raoResult.getVoltage(optInstantId, voltageCnec, unit);
         } catch (FaraoException e) {
             return Double.NaN;
         }
     }
 
-    private static double safeGetMargin(RaoResult raoResult, VoltageCnec voltageCnec, Instant optInstant, Unit unit) {
+    private static double safeGetMargin(RaoResult raoResult, VoltageCnec voltageCnec, String optInstantId, Unit unit) {
         // methods getMargin can return an exception if RAO is executed on one state only
         try {
-            return raoResult.getMargin(optInstant, voltageCnec, unit);
+            return raoResult.getMargin(optInstantId, voltageCnec, unit);
         } catch (FaraoException e) {
             return Double.NaN;
         }
